resolved all alignement and text bug in buyer and supplier panel and also chnaged the button color and table head font color changed in buyer and supplier panel

--- a/src/Buyer/components/Buy/Details/productdetails.module.css
+++ b/src/Buyer/components/Buy/Details/productdetails.module.css
@@ -246,6 +246,7 @@
   font-size: 14px;
   font-weight: 500;
   width: 250px;
+  color: #212121;
 }
 
 .medicineHeadings {
