--- a/src/Buyer/components/Invoice/invoicecard.module.css
+++ b/src/Buyer/components/Invoice/invoicecard.module.css
@@ -3,8 +3,9 @@
   width: 400px;
   background-color: #ffffff;
   padding: 30px;
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 5px -1px #32325d40, 0 1px 3px -1px #0000004d;
 }
+
 .invoice-card-design-inner {
   display: flex;
   flex-direction: column;
@@ -12,6 +13,7 @@
   align-items: start;
   gap: 0.9rem;
 }
+
 .invoice-card-section {
   width: 100%;
   display: flex;
@@ -19,20 +21,24 @@
   align-items: start;
   gap: 0.9rem;
 }
+
 .invoice-card-conts {
   display: flex;
   justify-content: start;
 }
+
 .invoice-card-conts-head {
   font-size: 14px;
   width: 150px;
   font-weight: 500;
 }
+
 .invoice-card-conts-text {
   font-size: 14px;
   color: #616161;
   font-weight: 500;
 }
+
 .invoice-card-img-container {
   border-radius: 4px;
   background-color: #ffffff;
@@ -44,13 +50,17 @@
   width: 100%;
   height: auto;
 }
+
 /* open the modal css */
 .invoice-card-img-container {
+  box-shadow: 0 2px 5px -1px #32325d40, 0 1px 3px -1px #0000004d;
   width: 380px;
+  display: flex;
+  justify-content: center;
 }
 
 .invoice-card-img {
-  width: 100%;
+  width: 140px;
   height: auto;
 }
 
@@ -83,7 +93,8 @@
   position: absolute;
   top: -10px;
   right: 10px;
-   cursor: pointer !important;;
+  cursor: pointer !important;
+  ;
   font-size: 33px;
   color: black;
   font-weight: 500;
@@ -94,17 +105,21 @@
   max-width: 100%;
   height: auto;
 }
+
 @media (max-width: 768px) {
   .invoice-card-design-container {
     width: 100%;
   }
+
   .invoice-card-img-container {
     width: 100%;
   }
+
   .invoice-card-design-inner {
     flex-direction: row;
   }
 }
+
 @media (max-width: 540px) {
   .invoice-card-design-inner {
     flex-direction: column !important;
